# go-job-runner/pkg/model/api.go
@@ -1,5 +1,7 @@
 package model
 
+import "time"
+
 type ErrorResponse struct {
 	Code    int    `json:"code"`
 	Message string `json:"message"`
@@ -9,6 +11,12 @@ type WorkerAPI struct {
 	ID          string `json:"id"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
+}
+
+type JobStatusAPI struct {
+	Message   string         `json:"message"`
+	Timestamp time.Time      `json:"timestamp"`
+	Output    map[string]any `json:"output"`
 }
 
 type CreateWorkerRequest struct {
@@ -35,4 +43,8 @@ type LaunchJobRequest struct {
 
 type LaunchJobResponse struct {
 	JobID string `json:"job_id"`
+}
+
+type JobStatusesResponse struct {
+	Statuses []JobStatusAPI `json:"statuses"`
 }
